fixed spacing

--- a/src/components/generated-table/generatedTable.scss
+++ b/src/components/generated-table/generatedTable.scss
@@ -16,8 +16,7 @@
 }
 
 .table-container {
-    display: grid;
-    grid-auto-rows: 40px;
+    border-collapse: collapse;
 
 }
 
